# badge-groups

./: .gitignore  README.md  demo-data.csv  pyproject.toml
.github/workflows/: build_wheels.yml
src/badge_groups/: assign.py
