[project]
name = "badge-groups"
description = "TODO"
readme = "README.md"
authors = [
    { name = "David Wood", email = "code@dtwood.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "pulp>=3.3.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
badge-groups = "badge_groups.assign:main"

[build-system]
requires = ["hatchling>=1.26", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
